# Hash-Checker

./: .gitignore  cli.py  const.py  display_messages.py  hash_checker.py  main.py  pyproject.toml  readme.md  report.html  requirements.txt  virus_display.py  virus_total_api.py
logic/: cli.py  duplicate_file.py  hash_checker.py  menu_handler.py  virus_total_api.py
view/: display_messages.py  display_virus_total_report.py
