[tool.poetry]
name = "hashtool"
version = "0.1.0"
description = ""
authors = ["npngisfna <npngisfna@gmx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
questionary = "^2.1.0"
prompt-toolkit = "^3.0.51"
rich = "^14.0.0"
requests = "^2.32.3"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
